# PythonProject1

./: .env_template  .gitignore  README.md  main.py  pyproject.toml  requirements.txt  user_settings.json
data/: operations.xlsx
logs/: logging.conf
src/: main.py  models.py  reports.py  services.py  utils.py  views.py
src/reports/: by_weekday.py  work_vs_weekend.py
src/services/: analytics.py  cashback.py  finance_api.py  search.py
tests/: test_main.py  test_reports.py  test_services.py  test_views.py
tests/test_services/: test_cashback.py
web/: events.py  home.py
