[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"
pandas = "^2.3.0"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
