[tool.poetry]
name = "pythonproject1"
version = "0.1.0"
description = ""
authors = ["Anton Tumashov <Tumashovster@Gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^2.1.3"
pandas = "^2.3.0"
openpyxl = "^3.1.5"
dotenv = "^0.9.9"
python-dotenv = "^1.1.1"
fastapi = "^0.115.14"
unicorn = "^2.1.3"
loggers = "^0.1.4"
myapp = "^0.1.dev0"


[tool.poetry.group.dev.dependencies]
requests = "^2.32.4"
pytest = "^8.4.1"
pytest-cov = "^6.2.1"
fastapi = "^0.115.14"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
black = "^25.1.0"
isort = "^6.0.1"
mypy = "^1.16.1"

[tool.isort]
line-length = 119

[tool.black]
line-length = 119
exclude = ".git"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = true
exclude = "venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
